# zoom-local-secretary-nosdk

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/src/: config.py  pipeline.py  recorder.py  server.py
frontend/: index.html  script.js
