[project]
name = "zoom-local-secretary-wasapi"
version = "0.1.0"
description = "Local Zoom secretary capturing system audio, transcribing and summarizing."
authors = [{name = "Zoom Secretary"}]
requires-python = ">=3.10"
dependencies = [
    "sounddevice",
    "faster-whisper",
    "numpy",
    "fastapi",
    "uvicorn",
    "requests",
    "rich",
    "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
